--- a/Week5_Grids/buynow.html
+++ b/Week5_Grids/buynow.html
@@ -62,9 +62,16 @@
 	  				<div class="col-1of2">
 	  					<h2><a class ="dineinBut" id="dineinBut">DINE IN</a></h2>
 	  					<div id="div1">
-		  					<form method="post" action="#" id="comments">
-		  						<label for ="form-name">Table Number:</label>
-								<input type="text" id="form-name" name="form-name" placeholder="">
+	  						<form method="post" action="#" id="dinein">
+		  						<label for ="form-name">STORE:</label>
+									<select id="dinein">
+									  <option value="">JOYCE</option>
+									  <option value="">DOWNTOWN</option>
+									</select>
+		  					</form>
+		  					<form method="post" action="#" id="dinein">
+		  						<label for ="form-name">TABLE NUMBER:</label>
+								<input type="text" id="dinein" name="form-name" value="13">
 		  					</form>
 		  					<a class="buynowBut" href="personalbillinginfo.html">NEXT</a>	
 	  					</div>
@@ -73,17 +80,24 @@
 	  				<div class="col-1of2">
 	  					<h2><a class ="takeoutBut" id="takeoutBut">TAKE OUT</a></h2>
 	  					<div id="div2">
-	  						<p class="date">Date: 17 February 2014</p>
-		  					<form method="post" action="#" id="comments">
-		  						<label for ="form-name">Time:</label>
-								<select>
-								  <option value=""></option>
+	  						<form method="post" action="#" id="dinein">
+		  						<label for ="form-name">STORE:</label>
+									<select id="dinein">
+									  <option value="">JOYCE</option>
+									  <option value="">DOWNTOWN</option>
+									</select>
+		  					</form>
+	  						<p class="date">DATE: </p>
+	  						<p class="date2">17 February 2014</p>
+		  					<form method="post" action="#" id="dinein">
+		  						<label for ="form-name">TIME:</label>
+								<select id="dinein">
 								  <option value="">4:00pm</option>
 								  <option value="">4:30pm</option>
 								  <option value="">5:00pm</option>
 								</select>
 		  					</form>
-		  					<a class="buynowBut" href="">NEXT</a>	
+		  					<a class="buynowBut" href="personalbillinginfo.html">NEXT</a>	
 	  					</div>
 	  				</div>
 	  				</article>
