--- a/Week5_Grids/choosenoodle.html
+++ b/Week5_Grids/choosenoodle.html
@@ -110,7 +110,7 @@
               <a class="prodcomment" href="">14 Comments</a>
   					</div>
 
-  					<div class="col-1of3">
+<!--   					<div class="col-1of3">
               <img class="menu" src="img/noodle_egg.jpg" width="210" height="150">
               <p class="cartNrow">Egg Noodle</p>
               <p class="cartProw">$2.00</p>
@@ -135,7 +135,7 @@
               <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">14 Comments</a>
-            </div>
+            </div> -->
   				</article>
          
   			</div>
