--- a/Week5_Grids/choosesoup.html
+++ b/Week5_Grids/choosesoup.html
@@ -67,7 +67,7 @@
 
   					<div class="col-1of3">
   						<img class="menu"src="img/soup_spicy.jpg" width="210" heigh="150">
-              <p class="cartNrow">Spicy Soup</p>
+              <p class="cartNrow">Spicy Seafood Soup</p>
               <p class="cartProw">$2.00</p>
               <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
               <img class="rating"src="img/star.jpg">
@@ -75,8 +75,8 @@
   					</div>
 
   					<div class="col-1of3">
-  						<img class="menu"src="img/soup_egg.jpg" width="210" heigh="150">
-              <p class="cartNrow">Egg Soup</p>
+  						<img class="menu"src="img/soup_superspicy.jpg" width="210" heigh="150">
+              <p class="cartNrow">Super Spicy Soup</p>
               <p class="cartProw">$2.00</p>
               <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
               <img class="rating"src="img/star.jpg">
@@ -92,25 +92,25 @@
               <a class="prodcomment" href="">20 Comments</a>
   					</div>
 
-  					<div class="col-1of3">
-  						<img class="menu"src="img/soup_chicken.jpg" width="210" heigh="150">
-              <p class="cartNrow">Chicken Soup</p>
+            <div class="col-1of3">
+              <img class="menu"src="img/soup_egg.jpg" width="210" heigh="150">
+              <p class="cartNrow">Egg Soup</p>
               <p class="cartProw">$2.00</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+              <p class="cartDrow">Mixed egg, corn and flour, which is a thick soup</p>
+              <img class="rating"src="img/star.jpg">
+              <a class="prodcomment" href="">20 Comments</a>
+            </div>
+
+  					<div class="col-1of3">
+  						<img class="menu"src="img/soup_medicine.jpg" width="210" heigh="150">
+              <p class="cartNrow">Wolfberries Soup</p>
+              <p class="cartProw">$2.00</p>
+              <p class="cartDrow">A kind of chinese medicine that can preserve youth and health</p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">20 Comments</a>
   					</div>
 
-  					<div class="col-1of3">
-  						<img class="menu"src="img/soup_spicy.jpg" width="210" heigh="150">
-              <p class="cartNrow">Spicy Soup</p>
-              <p class="cartProw">$2.00</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-              <img class="rating"src="img/star.jpg">
-              <a class="prodcomment" href="">20 Comments</a>
-  					</div>
-
-  					<div class="col-1of3">
+<!--   					<div class="col-1of3">
               <img class="menu"src="img/soup_egg.jpg" width="210" heigh="150">
               <p class="cartNrow">Egg Soup</p>
               <p class="cartProw">$2.00</p>
@@ -126,7 +126,7 @@
               <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">20 Comments</a>
-            </div>
+            </div> -->
 
   				</article>
           
