--- a/Week5_Grids/choosetoppings.html
+++ b/Week5_Grids/choosetoppings.html
@@ -65,7 +65,7 @@
               <a class="prodcomment" href="">14 Comments</a>
   					</div>
 
-  					<div class="col-1of3">
+<!--   					<div class="col-1of3">
   						<img class="menu"src="img/topping_pigblood.jpg" width="210" heigh="150">
               <p class="cartNrow">Pig's Blood</p>
               <p class="cartProw">$1.50</p>
@@ -81,9 +81,18 @@
               <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">14 Comments</a>
-            </div>
+            </div> -->
 
   					<div class="col-1of3">
+  						<img class="menu"src="img/topping_chickenwing.jpg" width="210" heigh="150">
+              <p class="cartNrow">Chicken Wings</p>
+              <p class="cartProw">$1.50</p>
+              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+              <img class="rating"src="img/star.jpg">
+              <a class="prodcomment" href="">14 Comments</a>
+  					</div>
+
+<!--   					<div class="col-1of3">
   						<img class="menu"src="img/topping_chickenwing.jpg" width="210" heigh="150">
               <p class="cartNrow">Chicken Wings</p>
               <p class="cartProw">$1.50</p>
@@ -99,16 +108,7 @@
               <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">14 Comments</a>
-  					</div>
-
-  					<div class="col-1of3">
-  						<img class="menu"src="img/topping_chickenwing.jpg" width="210" heigh="150">
-              <p class="cartNrow">Chicken Wings</p>
-              <p class="cartProw">$1.50</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-              <img class="rating"src="img/star.jpg">
-              <a class="prodcomment" href="">14 Comments</a>
-  					</div>
+  					</div> -->
 
   					<div class="col-1of3">
   						<img class="menu"src="img/topping_fishball.jpg" width="210" heigh="150">
@@ -118,7 +118,7 @@
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">14 Comments</a>
   					</div>
-
+<!-- 
   					<div class="col-1of3">
   						<img class="menu"src="img/topping_fishball.jpg" width="210" heigh="150">
               <p class="cartNrow">Curry Fishball</p>
@@ -135,7 +135,7 @@
               <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">14 Comments</a>
-            </div>
+            </div> -->
 
 
             <div class="col-1of3">
