--- a/Week5_Grids/detailview.html
+++ b/Week5_Grids/detailview.html
@@ -48,9 +48,9 @@
   		<div class="grid">
   			<div class="col-1of5">
   				<a class="sideonpage" href="#cartnoodles">Cart Noodles</a>
-          		<a class="side" href="#soup">Soup</a>
-          		<a class="side" href="#drinks">Drinks</a>
-          		<a class="side" href="#dessert">Dessert</a>
+          		<a class="side" href="menu.html">Soup</a>
+          		<a class="side" href="menu.html">Drinks</a>
+          		<a class="side" href="menu.html">Dessert</a>
   			</div>
   			<div class="col-4of5">
   				<article id="paddingleft">
@@ -62,11 +62,12 @@
 	  				</div>
 	  				<div class="col-1of2">
 	  					<h3>$6.75</h3>
-	  					<p class="detailview">NOODLE: Egg Noddle</p>
+              <p class="detailviewDescription">DESCRIPTION:</p>
+              <p class="detailview">This is our new product. All the toppings are Hong Kong street snack, including curry fish ball, chinese red sasusage, pig blood and chinese radish. It services with our sepcial homemade soup. It would be the best choice if you want to eat many snack at once!</p>
+              <p class="detailviewDescription">INGREDIENTS:</p>
+	  				  <p class="detailview">NOODLE: Egg Noddle</p>
 	  					<p class="detailview">TOPPINGS: Curry Fishball</p>
 	  					<p class="detailview">SOUP: Homemade special</p>
-	  					<p class="detailviewDescription">Description:</p>
-	  					<p class="detailview">This is our new product. All the toppings are Hong Kong street snack, including curry fish ball, chinese red sasusage, pig blood and chinese radish. It services with our sepcial homemade soup. It would be the best choice if you want to eat many snack at once!</p>
 	  				</div>
   				</article>
   			</div>
@@ -85,7 +86,7 @@
   			<div class="col-4of5">
   				<article id="paddingleft">
   					<h1 class="globalDetailview2">MY COMMENT</h1>
-  					<h3 class="detailview">Rating:</h3>
+  					<h3 class="detailview">RATING:</h3>
   					<img src="img/star.jpg">
   					<textarea  >Write your comments here...</textarea>
   					<a class="addtocart">SUBMIT</a>
