--- a/Week5_Grids/index3.html
+++ b/Week5_Grids/index3.html
@@ -8,7 +8,6 @@
 <!--     <link rel="stylesheet" href="css/normalize.css"> -->
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/grid.css">
-    <link rel="stylesheet" href="css/imagehover.css">
 
   	</head>
 
@@ -50,25 +49,25 @@
     		<div class="grid">
     			<div class="col-1of3">
             <div class="rowGlobal">
-      				<h1 class="global">NEW STREET SNACK CART NOODLE</h1>
-      				<p class = "homepromo">It is one of the top three cart noodles. All the toppings are Hong Kong street snack, including curry fish ball, chinese red sasusage, pig blood and chinese radish. It services with our sepcial homemade soup. It would be the best choice if you want to eat many snack at once!</p>
-              <a class="addtocart" href="cart.html">ADD TO CART</a>
+      				<h1 class="global">BUY ONE GET ONE FREE code: get1free</h1>
+      				<p class = "homepromo">To celebrate our new store in Downtown Vancouver, you can buy one get one free of any products in any Nood cart noodle restaurants in Canada. Providing the promotion code while ordering in stores or online, you can enjoy one more order for FREE. Are you ready?</p>
+              <a class="addtocart" href="news.html">VIEW DETAILS</a>
             </div>
     			</div>
 
     			<div class="col-1of3">
             <div class="rowGlobal">
-              <img class="home"src="img/bignews1.jpg" width="100%" height="90%">
+              <img class="home"src="img/codebig.jpg" width="100%">
             </div>
     			</div>
 
     			<div class="col-1of3">
             <div class="rowGlobalsideimage">
-              <a href="index.html"><p class="homesideonpage"><img class="homeside"src="img/homeside_s1.jpg" width="250" height="40" alt="Street Snack"> NEW STREET SNACK NOODLE</p></a>
+              <a href="index.html"><p class="homeside"><img class="homeside"src="img/homeside_s1.jpg" width="250" height="40" alt="Street Snack"> NEW STREET SNACK NOODLE</p></a>
 
               <a href="index2.html"><p class="homeside"><img class="homeside"src="img/homeside_s2.jpg" width="250" height="40">NEW STORE OPENS IN DOWNTOWN</p></a>
 
-              <a href="index3.html"><p class="homeside"><img class="homeside"src="img/homeside_s3.jpg" width="250" height="40">PROMOTION CODE: get1free</p></a>
+              <a href="index3.html"><p class="homesideonpage"><img class="homeside"src="img/homeside_s3.jpg" width="250" height="40">PROMOTION CODE: get1free</p></a>
             </div>
     			</div>
 
@@ -79,26 +78,13 @@
     		<h1 class="topFive">TOP FIVE CART NOODLES</h1>
     		<div class="grid">
     			<div class="col-oneof5">
-            <!-- <a href="detailview.html"><img class="homebottom"src="img/nood1.jpg" width="170" height="170"></a> -->
-            <div class="view-first">  
-                 <img class="homebottom"src="img/nood1.jpg" width="170" height="170"/>
-                 <div class="mask">  
-                     <a href="detailview.html" class="info">VIEW DETAILS</a>  
-                 </div>  
-            </div> 
+            <a href="detailview.html"><img class="homebottom"src="img/nood1.jpg" width="170" height="170"></a>
             <p class="homeNrow">Fishball Nood</p>
             <p class="homeProw">$6.75</p>
             <img class="rating"src="img/star.jpg">
     			</div>
     			<div class="col-oneof5">
-           <!--  <img class="homebottom"src="img/nood2.jpg" width="170" height="170"> -->
-            <div class="view-first">  
-                 <img class="homebottom"src="img/nood2.jpg" width="170" height="170">
-                 <div class="mask">  
-                     <a href="detailview.html" class="info">VIEW DETAILS</a>  
-                 </div>  
-            </div>
-            
+            <img class="homebottom"src="img/nood2.jpg" width="170" height="170">
             <p class="homeNrow">Healthy Nood</p>
             <p class="homeProw">$6.75</p>
             <img class="rating"src="img/star.jpg">
