--- a/Week5_Grids/receipt.html
+++ b/Week5_Grids/receipt.html
@@ -59,7 +59,7 @@
 	  				<p class="pi">NAME : </p>
 	  				</article>	
 	  			</div>
-	  			<a class="conBut" href="index.html">FINISH</a>
+	  			<a class="conBut" href="index.html">BACK TO HOME</a>
 	  		</div>
   		</article>
 
