--- a/Week5_Grids/about.html
+++ b/Week5_Grids/about.html
@@ -57,12 +57,13 @@
   					<P class="aboutus">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate. Fusce tempus euismod massa, at tincidunt ante sollicitudin at. Phasellus viverra lobortis orci nec aliquet. Proin fringilla, enim quis porttitor tincidunt, eros orci feugiat nunc, quis feugiat velit nibh ac augue. Cras vel turpis mattis, cursus metus a, pharetra purus. Maecenas non nisi in lectus bibendum semper. Proin sodales vitae quam id ultricies. Integer commodo eros quis diam scelerisque tempus. Sed ut ornare erat. Aliquam feugiat nunc in posuere auctor. Nullam nisl leo, eleifend et libero quis, venenatis auctor ipsum.</P>
             <h2>"Experience the cart noodle culture in store and provide the best customer service."</h2>
             <img class="about" src="img/about.jpg" width="688">
-            <a class="about" href="contact.html">CONTACTS US</a>
+            <a class="about" href="contact.html">CONTACT US</a>
   				</article>
 
   				<article id="history">
   					<h1 class="global">HISTORY</h1>
   					<P class="history">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate. Fusce tempus euismod massa, at tincidunt ante sollicitudin at. Phasellus viverra lobortis orci nec aliquet. Proin fringilla, enim quis porttitor tincidunt, eros orci feugiat nunc, quis feugiat velit nibh ac augue. Cras vel turpis mattis, cursus metus a, pharetra purus. Maecenas non nisi in lectus bibendum semper. Proin sodales vitae quam id ultricies. Integer commodo eros quis diam scelerisque tempus. Sed ut ornare erat. Aliquam feugiat nunc in posuere auctor. Nullam nisl leo, eleifend et libero quis, venenatis auctor ipsum.</P>
+            <h2>"From cart to restaurant, effort only fully releases its reward after we refuse to quit."</h2>
             <img class="about" src="img/history.jpg">
             <a class="about" href="news.html">OUR NEWS</a>
   				</article>
