--- a/Week5_Grids/news.html
+++ b/Week5_Grids/news.html
@@ -59,7 +59,8 @@
               <img class="contact"src="img/bignews1.jpg" width="300">
             </div>
             <div class="col-1of2">
-    					<P class="news">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate. Fusce tempus euismod massa, at tincidunt ante sollicitudin at. Phasellus viverra lobortis orci nec aliquet. Proin fringilla, enim quis porttitor tincidunt, eros orci feugiat nunc, quis feugiat velit nibh ac augue. Cras vel turpis mattis, cursus metus a, pharetra purus. Maecenas non nisi in lectus bibendum semper. Proin sodales vitae quam id ultricies. </P>
+    					<h3>NEW STREET SNACK CART NOODLE</h3>
+              <P class="news">It is one of the top three cart noodles. All the toppings are Hong Kong street snack, including curry fish ball, chinese red sasusage, pig blood and chinese radish. It services with our sepcial homemade soup. It would be the best choice if you want to eat many snack at once!</P>
               <!-- <a class="about" href="">VIEW DETAILS</a> -->
               <a class="about" href="cart.html">ADD TO CART</a>
             </div>
@@ -67,12 +68,15 @@
 
   				<article id="promotion">
   					<h1 class="global">PROMOTIONS</h1>
-  					<P class="promotion">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate. Fusce tempus euismod massa, at tincidunt ante sollicitudin at. Phasellus viverra lobortis orci nec aliquet. Proin fringilla, enim quis porttitor tincidunt, eros orci feugiat nunc, quis feugiat velit nibh ac augue. Cras vel turpis mattis, cursus metus a, pharetra purus. Maecenas non nisi in lectus bibendum semper. Proin sodales vitae quam id ultricies. Integer commodo eros quis diam scelerisque tempus. Sed ut ornare erat. Aliquam feugiat nunc in posuere auctor. Nullam nisl leo, eleifend et libero quis, venenatis auctor ipsum.</P>
+            <img class="contact"src="img/longnews.jpg">
+  					<P class="promotion">Offer valid beginning February 8, 2014 through March 31, 2014 in Nood Cart Noodle Restaurant and online at noodcartnoodle.com. Offer not valid outside Canada. Maximum discount available is $40.00. Purchase amount is calculated pre-tax and excludes purchases of gift cards. Cannot be applied to previous purchases. Cannot be used in combination with other offers or promotion codes on the same order, or in combination with Associate Discount. Promotion code must be entered at time of online purchase or presented in stores at time of make a order. Promo code is non-transferable. Discount will be applied to the bills to all eligible items and will be deducted upon return of any item to which the discount was applied. Purchase quantities may be limited. Not redeemable for cash or credit. Other restrictions may apply. Offer expires at 11:59pm PST. Promotion code: get1free</P>
+            <a class="about" href="menu.html">VIEW MENU</a>
   				</article>
 
   				<article id="events">
   					<h1 class="global">EVENTS</h1>
-  					<P class="events">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate. Fusce tempus euismod massa, at tincidunt ante sollicitudin at. Phasellus viverra lobortis orci nec aliquet. Proin fringilla, enim quis porttitor tincidunt, eros orci feugiat nunc, quis feugiat velit nibh ac augue. Cras vel turpis mattis, cursus metus a, pharetra purus. Maecenas non nisi in lectus bibendum semper. Proin sodales vitae quam id ultricies. Integer commodo eros quis diam scelerisque tempus. Sed ut ornare erat. Aliquam feugiat nunc in posuere auctor. Nullam nisl leo, eleifend et libero quis, venenatis auctor ipsum.</P>
+  					<P class="events">No events are coming in March 2014.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate. Fusce tempus euismod massa, at tincidunt ante sollicitudin at. Phasellus viverra lobortis orci nec aliquet. Proin fringilla, enim quis porttitor tincidunt, eros orci feugiat nunc, quis feugiat velit nibh ac augue. Cras vel turpis mattis, cursus metus a, pharetra purus. Maecenas non nisi in lectus bibendum semper. Proin sodales vitae quam id ultricies. Integer commodo eros quis diam scelerisque tempus. Sed ut ornare erat. Aliquam feugiat nunc in posuere auctor. Nullam nisl leo, eleifend et libero quis, venenatis auctor ipsum.</P>
   				</article>
   			</div>
 
