--- a/Week5_Grids/personalbillinginfo.html
+++ b/Week5_Grids/personalbillinginfo.html
@@ -57,34 +57,61 @@
 	  			<div class="col-4of5">
 	  				<article id="paddingleft">
 	  				<h1 class="global">PERSONAL INFORMAION</h1>
-	  				<form method="post" action="#" id="comments">
-  						<label for ="form-name">Name:</label>
-						<input type="text" id="form-name" name="form-name" placeholder="">
-  					</form>
+	  				<div class="personalB">
+		  				<form method="post" action="#" id="comments">
+	  						<label for ="form-name">NAME:</label>
+							<input type="text" id="personalB" name="form-name" value="Mary">
+	  					</form>
+	  					<form method="post" action="#" id="comments">
+	  						<label for ="form-name">TELEPHONE:</label>
+							<input type="text" id="personalB" name="form-name" value="6041232333">
+	  					</form>
+  					</div>
 
 	  				<h1 class="global">BILLING INFORMATION</h1>
-	  				<form method="post" action="#" id="comments">
-  						<label for ="form-name">PAYMENT TYPE:</label>
-						<input type="text" id="form-name" name="form-name" placeholder="">
-  					</form>
-  					<form method="post" action="#" id="comments">
-  						<label for ="form-name">CARD NUMBER:</label>
-						<input type="text" id="form-name" name="form-name" placeholder="">
-  					</form>
-  					<form method="post" action="#" id="comments">
-  						<label for ="form-name">EXPIRES:</label>
-						<input type="text" id="form-name" name="form-name" placeholder="">
-  					</form>
-  					<form method="post" action="#" id="comments">
-  						<label for ="form-name">SECURITY CODE:</label>
-						<input type="text" id="form-name" name="form-name" placeholder="">
-  					</form>
+	  				<div class="personalB">
+		  				<form method="post" action="#" id="comments">
+		  						<label for ="form-name">PAYMENT TYPE:</label>
+								<select id="personalB">
+								  <option value="">VISA</option>
+								  <option value="">MASTERCARD</option>
+								  <option value="">CASH</option>
+								</select>
+		  					</form>
+	  					<form method="post" action="#" id="comments">
+	  						<label for ="form-name">CARD NUMBER:</label>
+							<input type="text" id="personalB" name="form-name" value="4567890890123">
+	  					</form>
+	  					<form method="post" action="#" id="comments">
+	  						<label for ="form-name">EXPIRES:</label>
+								<select id="personalB2">
+								  <option value="">01</option>
+								  <option value="">02</option>
+								  <option value="">03</option>
+								  <option value="">04</option>
+								  <option value="">05</option>
+								  <option value="">06</option>
+								  <option value="">07</option>
+								  <option value="">08</option>
+								  <option value="">09</option>
+								  <option value="">10</option>
+								  <option value="">11</option>
+								  <option value="">12</option>
+								</select>
+								<select id="personalB3">
+								  <option value="">2015</option>
+								  <option value="">2016</option>
+								  <option value="">2017</option>
+								  <option value="">2018</option>
+								</select>
+	  					</form>
+	  					<form method="post" action="#" id="comments">
+	  						<label for ="form-name">SECURITY CODE:</label>
+							<input type="text" id="personalB" name="form-name" value="111">
+	  					</form>
+  					</div>
 
-	  				<h1 class="global">PROMOTION</h1>
-	  				<form method="post" action="#" id="comments">
-  						<label for ="form-name">PROMOTION CODE:</label>
-						<input type="text" id="form-name" name="form-name" placeholder="">
-  					</form>
+
 	  				<a class="persoanlbillBut" href="confirm.html">SAVE AND NEXT</a>
 	  				</article>
 	  			</div>
