Cart page changes

--- a/Week5_Grids/cart.html
+++ b/Week5_Grids/cart.html
@@ -52,23 +52,35 @@
   				</div>
 
   				<div class="col-4of5">
-  					<article id="paddingleftNext">
+  					<article id="cartlines">
 		  				<div class="col-2of4">
-		  					<h3>CART NOODLE</h3>
-		  					<img class="cart" src="img/nood1.jpg" width="80" heigh="80">
-		  					<h3>Fishball Nood</h3>
-		  					<p class="cart"><a class="cart" href="">VIEW DETAILS</a> / <a class="cart" href="">REMOVE</a></p>
+		  					<h3 id="carttitle">CART NOODLE</h3>
 		  				</div>
 
 		  				<div class="col-1of4">
-		  					<h3>QUANTITY</h3>
-		  					<h3>1</h3>
+		  					<h3 class="cartquantity" id="carttitle">QUANTITY</h3>
 		  				</div>
 
 		  				<div class="col-1of4">
-		  					<h3>PRICE</h3>
-		  					<h3>$6.75</h3>
+		  					<h3 class="cartprice" id="carttitle">PRICE</h3>
 		  				</div>
+            </article>
+          </div>
+          <div class="col-4of5">
+            <article id="paddingleftNext">
+              <div class="col-2of4">
+                <img class="cart" src="img/nood1.jpg" width="80" heigh="80">
+                <h3 id="cartitemname">Fishball Nood</h3>
+                <p class="cart"><a class="cart" href="">VIEW DETAILS</a> / <a class="cart" href="">REMOVE</a></p>
+              </div>
+
+              <div class="col-1of4">
+                <h3 class="cartquantity">1</h3>
+              </div>
+
+              <div class="col-1of4">
+                <h3 class="cartprice">$6.75</h3>
+              </div>
             </article>
           </div>
 
@@ -76,16 +88,16 @@
             <article id="paddingleftNext">
               <div class="col-2of4">
                 <img class="cart" src="http://placehold.it/80x80" width="80" heigh="80">
-                <h3>My Noodle</h3>
+                <h3 id="cartitemname">My Noodle</h3>
                 <p class="cart"><a class="cart" href="">VIEW DETAILS</a> / <a class="cart" href="">REMOVE</a></p>
               </div>
 
               <div class="col-1of4">
-                <h3>1</h3>
+                <h3 class="cartquantity">1</h3>
               </div>
 
               <div class="col-1of4">
-                <h3>$5.50</h3>
+                <h3 class="cartprice">$5.50</h3>
               </div>	  				
             </article>
           </div>
@@ -96,19 +108,19 @@
   					<div class="col-1of4" id="total">	
   						<h3 class ="cart">$12.25</h3>
   						<h3 class ="cart">$0.61</h3>
-  						<h3 class="cart" >$12.86</h3>
+  						<h3 class="cart" id="carttotalprice" >$12.86</h3>
   					</div>
   					<div class="col-1of4" id="total">
-  						<h3 class="">SUB-TOTAL:</h3>
-  						<h3 class="">GST/HST:</h3>
-  						<h3>TOTAL:</h3>
+  						<h3 class="cart">SUB-TOTAL:</h3>
+  						<h3 class="cart">GST/HST:</h3>
+  						<h3 class="cart" id="carttotalprice">TOTAL:</h3>
   					</div>
   				</div>
 	  		</div>
   		</article>
       
   		<article id="content2">
-  			<a class="cartBut" href="buynow.html">BUY NOW</a>
+  			<a class="cartBut2" href="buynow.html">BUY NOW</a>
   			<a class="cartBut" href="menu.html">BACK TO MENU</a>	
   		</article>
   	</body>
