--- a/Week5_Grids/index2.html
+++ b/Week5_Grids/index2.html
@@ -8,6 +8,7 @@
 <!--     <link rel="stylesheet" href="css/normalize.css"> -->
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/grid.css">
+    <link rel="stylesheet" href="css/imagehover.css">
 
   	</head>
 
@@ -78,7 +79,14 @@
     		<h1 class="topFive">TOP FIVE CART NOODLES</h1>
     		<div class="grid">
     			<div class="col-oneof5">
-            <a href="detailview.html"><img class="homebottom"src="img/nood1.jpg" width="170" height="170"></a>
+            <!-- <a href="detailview.html"><img class="homebottom"src="img/nood1.jpg" width="170" height="170"></a> -->
+
+            <div class="view-first">  
+                 <img class="homebottom"src="img/nood1.jpg" width="170" height="170"/>
+                 <div class="mask">  
+                     <a href="detailview.html" class="info">VIEW DETAILS</a>  
+                 </div>  
+            </div> 
             <p class="homeNrow">Fishball Nood</p>
             <p class="homeProw">$6.75</p>
             <img class="rating"src="img/star.jpg">
