--- a/Week5_Grids/menu.html
+++ b/Week5_Grids/menu.html
@@ -125,7 +125,7 @@
               <img class="menu"src="img/soup.jpg" width="210" height="150">
               <p class="cartNrow">Carrot Pork Soup</p>
               <p class="cartProw">$3.50</p>
-              <p class="cartDrow">Carrot, potato and juicy pork</p>
+              <p class="cartDrow">Carrot, potato and pork ribs</p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">56 Comments</a>
             </div>
@@ -134,7 +134,7 @@
               <img class="menu"src="img/soup_pork.jpg" width="210" height="150">
               <p class="cartNrow">Corn Pork Soup</p>
               <p class="cartProw">$3.50</p>
-              <p class="cartDrow">Carrot, potato and juicy pork</p>
+              <p class="cartDrow">Corn, cabbage and juicy pork</p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">56 Comments</a>
             </div>
@@ -143,7 +143,7 @@
               <img class="menu"src="img/soup_beef.jpg" width="210" height="150">
               <p class="cartNrow">Beef Soup</p>
               <p class="cartProw">$3.50</p>
-              <p class="cartDrow">Carrot, potato and juicy pork</p>
+              <p class="cartDrow">Beef and lettuce in white soup</p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">56 Comments</a>
             </div>
@@ -173,7 +173,7 @@
               <img class="menu"src="img/drink.jpg" width="210" height="150">
               <p class="cartNrow">Ice Lemon Tea</p>
               <p class="cartProw">$1.50</p>
-              <p class="cartDrow">Red tea with slides of lemon</p>
+              <p class="cartDrow">Iced red tea with slides of lemon</p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">19 Comments</a>
             </div>
@@ -182,7 +182,7 @@
               <img class="menu"src="img/drink_redbean.jpg" width="210" height="150">
               <p class="cartNrow">Ice Reb Bean</p>
               <p class="cartProw">$1.50</p>
-              <p class="cartDrow">With vanilla ice cream on the top and mixed red bean on the bottom</p>
+              <p class="cartDrow">With vanilla ice cream and mixed red bean at the bottom</p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">19 Comments</a>
             </div>
@@ -191,7 +191,7 @@
               <img class="menu"src="img/drink_milktea.jpg" width="210" height="150">
               <p class="cartNrow">Ice Milktea</p>
               <p class="cartProw">$1.50</p>
-              <p class="cartDrow">Hong Kong Style Milktea, mixed with the milk and red tea</p>
+              <p class="cartDrow">Hong Kong style milktea, mixed with the milk and red tea</p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">19 Comments</a>
             </div>
@@ -248,16 +248,16 @@
               <img class="menu"src="img/dessert_portturnover.jpg" width="210" height="150">
               <p class="cartNrow">Pork Turnover</p>
               <p class="cartProw">$1.50</p>
-              <p class="cartDrow">Soak bread in eggs and add milk and sugar</p>
+              <p class="cartDrow">Ground pork and seasonings tucked inside</p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">23 Comments</a>
             </div>
 
             <div class="col-1of3" id="menu">
               <img class="menu"src="img/dessert_eggball.jpg" width="210" height="150">
-              <p class="cartNrow">Egg Balls</p>
+              <p class="cartNrow">Ball Waffle</p>
               <p class="cartProw">$1.50</p>
-              <p class="cartDrow">Soak bread in eggs and add milk and sugar</p>
+              <p class="cartDrow">Made from eggs, sugar, flour and light evaporated milk</p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">23 Comments</a>
             </div>
@@ -275,7 +275,7 @@
               <img class="menu"src="img/dessert_riceball.jpg" width="210" height="150">
               <p class="cartNrow">Rice Balls</p>
               <p class="cartProw">$1.50</p>
-              <p class="cartDrow">Combine with sugar, condensed milk and butter</p>
+              <p class="cartDrow">Made from glutinous rice and have red bean fillings</p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">23 Comments</a>
             </div>
